# SchoolDocuments

./: .clang-format  .clang-tidy  .flake8  .gitignore  Arduino.h  Assignment3.ipynb  CMakeLists.txt  LICENSE  PathwayToPR.md  README.md  Zybo-Z7-Master.xdc  de10nano-nohps.qsf  pyproject.toml  school.cmput379.notes.md  userinstalled.txt
Assignment1/: 1548454.lisp  main.py  report.tex
Assignment2/: 1548454.lisp  main.py  report.tex  runtime.tikz  tutorial_problem.txt
Assignment3/: 1548454.pl  Assignment3.ipynb
Assignment4/: Assignment4.ipynb  clp.pl  ferry.lp  ferryIn0.lp  ferryIn1.lp  ferryIn2.lp  ferryInstance1.lp  ferryInstance2.lp  report.csv
Assignments/: Assignment1.tex  BarrelShifter.vhd  BarrelShifter_tb.vhd  GrayCounter.vhd  GrayCounter_tb.vhd  assignment.cls
CMPUT301/: Android.md  Course.md  Decorator.java  Mock.java  PracticeMidtermQ1.wsd  UMLIntro.wsd  codetouml.wsd  factory.puml  templatemethod.java
CMPUT325/: .gitignore
CMPUT366/: .flake8  .gitignore  pyproject.toml
CMPUT379/: CMPUT379.code-workspace  CMakeLists.txt  main.tex
CheatSheets/: CMPUT272FinalCheatSheet.tex  CMPUT272MT2CheatSheet.tex  CMPUT291FinalCheatsheet.tex  ECE342FinalCheatsheet.tex  ENGM401.md  ENGM401_final_cheatsheet.tex  name.tex
Coffee/: pom.xml
ECE203/: ECE203Ps7.tex  res1.csv
ECE240/: ECE240As7.tex  ECE240As9.tex
ECE302/: ProblemSet3.tex
ECE311/: Assignment1.tex  Assignment3.tex  Assignment4.tex  Notes.tex
ECE315/: Assignment1.md  Assignment1.tex  Assignment2.tex  Assignment4.tex
ECE325/: .gitignore
ECE340/: ECE304.md
ECE410/: .gitignore  Assignment1.tex
ECE420/Assignments/: .gitignore  CMakeLists.txt
ECE420/Assignments/Assignment1/: Assignment1.tex  barrier.c  prodcon.c
ECE420/Assignments/Assignment2/: Assignment2.tex  fibonacci.cpp  threads.c
ECE420/Assignments/Assignment3/: Assignment3.tex
ECE487/: Assignment1.tex  Assignment2.tex  Assignment4.xopp  Assignment7.tex  CSMACD.tex  Midterm2.xopp
ENGG400/: IDP.docx
ENGL199/: capping_presentation.tex  citations.bib
ENGM401/: ENGM401.tex
FireCity/: settings.gradle
GenericStack/: pom.xml
mem_layout/: CMakeLists.txt  Makefile  README.md  main.c  mem_1.c  mem_2.c  mem_3.c  memlayout.c  memlayout.h
valws/: CMakeLists.txt  DESIGN.md  Makefile  main.c  queue.c
valws/report/: report.tex
valws/tests/: heapsort.c
valws/util/: lru.c  lru.h  multiset.c  multiset.h  queue.h
(+701 files in other folders)
