[tool.poetry]
name = "cmput366"
version = "0.1.0"
description = ""
authors = ["Michael Kwok <michael.kwok00@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
