[tool.poetry]
name = "cmput366"
version = "0.1.0"
description = ""
authors = ["Michael Kwok <michael.kwok00@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.0"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
black = { version = "^21.9b0", allow-prereleases = true }
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main.py:main"
